# flask_blog

./: .deepsource.toml  app.py  forms.py  pyproject.toml  requirements.txt  run.py
application/: __init__.py  config.py  forms.py  models.py  routes.py  site.db
application/templates/: account.html  register.html
flask_app/: __init__.py  forms.py  models.py  routes.py  site.db
flask_app/templates/: about.html  account.html  create_post.html  home.html  layout.html  login.html  post.html  register.html  user_post.html
static/: main.css
templates/: about.html  home.html  layout.html  login.html  register.html
